--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.udun</groupId>
-    <artifactId>Library</artifactId>
+    <artifactId>Library-practice</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
